--- a/app/src/main/res/layout/card_record.xml
+++ b/app/src/main/res/layout/card_record.xml
@@ -41,6 +41,34 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/customer_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:textColor="@android:color/black"
+                android:text="Customer Name: "
+                />
+
+            <TextView
+                android:id="@+id/customer_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:textColor="@android:color/black"
+                tools:text="mukesh singhal"
+                android:layout_marginStart="10dp"
+                android:textStyle="bold"
+                />
+
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
