--- a/app/src/main/res/layout/activity_print.xml
+++ b/app/src/main/res/layout/activity_print.xml
@@ -5,13 +5,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     >
     <data>
+        <import type="android.view.View"/>
+        <import type="com.dawar.jewellerybilling.Utils"/>
+        <variable
+            name="viewModel"
+            type="com.dawar.jewellerybilling.print.printBill.PrintBillViewModel" />
         <variable
             name="bill"
             type="com.dawar.jewellerybilling.database.entities.Bill" />
 
-        <variable
-            name="customer"
-            type="com.dawar.jewellerybilling.database.entities.Customer" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -60,15 +62,18 @@
                 android:layout_height="match_parent"
                 app:srcCompat="@drawable/ic_chevron_left"
                 android:tint="@android:color/black"
+                android:onClick="previousBill"
                 />
 
             <EditText
+                android:id="@+id/bill_id_field"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{String.valueOf(bill.billId)}"
                 tools:text="01"
                 android:gravity="center"
                 android:layout_gravity="center"
+                android:inputType="number"
+                android:imeOptions="actionDone"
                 android:ems="4"
                 android:textColor="@android:color/black"
                 />
@@ -79,15 +84,29 @@
                 app:srcCompat="@drawable/ic_chevron_right"
                 android:layout_gravity="end"
                 android:tint="@android:color/black"
+                android:onClick="nextBill"
                 />
 
         </FrameLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            app:layout_constraintTop_toTopOf="parent"
+            android:text="@string/bill_not_found"
+            android:textSize="20sp"
+            tools:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:visibility="@{bill==null? View.VISIBLE: View.GONE }"
+            />
 
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintTop_toBottomOf="@id/bill_header"
             app:layout_constraintBottom_toBottomOf="parent"
+            android:visibility="@{bill==null? View.GONE: View.VISIBLE }"
             >
 
             <LinearLayout
@@ -100,7 +119,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@{customer.name}"
+                    android:text="@{bill.customerName}"
                     tools:text="Pankaj kumar"
                     android:textColor="@android:color/black"
                     android:textSize="18sp"
@@ -110,7 +129,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@{String.valueOf(bill.date)}"
+                    android:text="@{Utils.getDateStringFromLong(bill.date)}"
                     tools:text="21/21/323"
                     android:textSize="18sp"
                     android:textStyle="bold"
@@ -123,6 +142,7 @@
                     android:orientation="vertical"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="5dp"
+                    android:padding="5dp"
                     />
 
                 <LinearLayout
