--- a/app/src/main/res/layout/activity_set_up.xml
+++ b/app/src/main/res/layout/activity_set_up.xml
@@ -48,6 +48,7 @@
             >
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/business_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
@@ -74,7 +75,6 @@
             >
 
             <Button
-                android:id="@+id/get_started"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/get_started"
