--- a/app/src/main/res/layout/activity_print.xml
+++ b/app/src/main/res/layout/activity_print.xml
@@ -270,6 +270,7 @@
                         android:textAllCaps="false"
                         android:layout_marginTop="10dp"
                         android:layout_marginEnd="20dp"
+                        android:onClick="@{()->viewModel.printBill()}"
                         />
 
                     <Button
