--- a/app/src/main/res/layout/activity_pendings.xml
+++ b/app/src/main/res/layout/activity_pendings.xml
@@ -28,12 +28,36 @@
             android:text="@string/pendings"
             android:textColor="@color/colorPrimary"
             android:textSize="24sp"
+            android:layout_gravity="center"
             android:layout_marginStart="10dp"
             />
+
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            app:srcCompat="@drawable/ic_add"
+            android:textAllCaps="false"
+            android:backgroundTint="@android:color/holo_red_dark"
+            android:onClick="deleteALl"
+            android:text="Delete All"
+            android:drawableTint="@android:color/white"
+            android:drawableEnd="@drawable/ic_delete_sweep"
+            android:layout_marginEnd="5dp"
+            app:tint="@color/colorPrimary" />
+
 
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/pending_recycler"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/header"
