--- a/app/src/main/res/layout/card_pending.xml
+++ b/app/src/main/res/layout/card_pending.xml
@@ -79,7 +79,7 @@
             app:layout_constraintTop_toBottomOf="@+id/pending_total_amount" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/restore"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
@@ -90,7 +90,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/delete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -98,7 +98,7 @@
             android:text="Delete"
             android:textAllCaps="false"
             android:backgroundTint="@android:color/holo_red_dark"
-            app:layout_constraintStart_toEndOf="@+id/button"
+            app:layout_constraintStart_toEndOf="@+id/restore"
             app:layout_constraintTop_toBottomOf="@+id/pending_amount_received" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
