--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="colorAccent_light">#E3F4F3</color>
     <color name="golden">#CCAC03</color>
-    <color name="golden_light">#FBF1B8</color>
+    <color name="golden_light">#F8F4DC</color>
     <color name="white">#FFFFFF</color>
     <color name="gray">#636262</color>
     <color name="red_light">#FDD4D4</color>
