--- a/app/src/main/res/layout/activity_billing.xml
+++ b/app/src/main/res/layout/activity_billing.xml
@@ -82,45 +82,63 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
                 android:text="Gold"
                 android:textColor="@android:color/black"
-                android:textSize="20sp" />
 
+                android:textSize="19sp" />
             <EditText
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
-                android:layout_weight="2"
+                android:layout_weight="2.5"
                 android:enabled="@{viewModel.editRateEnabled}"
                 android:inputType="number"
                 android:text="@={goldRate}"
                 android:textColor="@android:color/black"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:layout_margin="0dp"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="5dp"
+                android:labelFor="@+id/silver_rate"
+                android:text="/g"
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/silver_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
                 android:labelFor="@+id/silver_rate"
                 android:text="Silver"
                 android:textColor="@android:color/black"
-                android:textSize="20sp" />
+                android:textSize="19sp" />
 
             <EditText
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
-                android:layout_weight="2"
+                android:layout_weight="2.5"
                 android:autofillHints="New rate"
                 android:inputType="number"
                 android:text="@={silverRate}"
                 android:textColor="@android:color/black"
                 android:textStyle="bold"
                 app:enabled="@{viewModel.editRateEnabled}" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:labelFor="@+id/silver_rate"
+                android:text="/g"
+                android:layout_margin="0dp"
+                android:padding="0dp"
+                android:textSize="20sp" />
 
             <FrameLayout
                 android:layout_width="0dp"
