--- a/app/src/main/res/layout/card_bill_item.xml
+++ b/app/src/main/res/layout/card_bill_item.xml
@@ -157,7 +157,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="₹"
+                    android:text="@string/rupee_symbol"
                     android:textStyle="bold"
                     android:layout_marginStart="2dp"
                     android:textColor="@android:color/black"
