--- a/app/src/main/res/menu/bill_options_menu.xml
+++ b/app/src/main/res/menu/bill_options_menu.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    >
     <item
         android:id="@+id/option_view_pending"
-        android:title="View pending" />
+        android:title="@string/view_pending"
+        >
+    </item>
 
     <item
-        android:id="@+id/option_del_last_bill"
-        android:title="Delete last bill and record" />
+        android:id="@+id/option_goto_last_bill"
+        android:title="@string/goto_last_bill"
+        />
 
 </menu>
