--- a/app/src/main/res/layout/activity_update_customer.xml
+++ b/app/src/main/res/layout/activity_update_customer.xml
@@ -196,16 +196,42 @@
 
                 </com.google.android.material.textfield.TextInputLayout>
 
-                <Button
-                    android:id="@+id/save"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="save"
-                    android:enabled="@{viewModel.valid}"
-                    android:visibility="@{viewModel.isInEditMode ? View.VISIBLE : View.INVISIBLE}"
-                    android:onClick="@{()->viewModel.saveCustomer(customer)}"
+                    android:orientation="horizontal"
                     android:layout_marginTop="20dp"
-                    />
+                    >
+
+                    <Button
+                        android:id="@+id/save"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:text="@string/save"
+                        android:enabled="@{viewModel.valid}"
+                        android:visibility="@{viewModel.isInEditMode ? View.VISIBLE : View.INVISIBLE}"
+                        android:onClick="@{()->viewModel.saveCustomer(customer)}"
+                        />
+
+                    <Space
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.2"
+                        />
+
+                    <Button
+                        android:id="@+id/delete"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:text="@string/delete"
+                        android:onClick="delete"
+                        android:backgroundTint="@android:color/holo_red_dark"
+                        />
+
+
+                </LinearLayout>
 
             </LinearLayout>
 
@@ -214,6 +240,7 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:padding="10dp"
+                tools:visibility="visible"
                 android:visibility="@{viewModel.isDetailsTabSelected?View.INVISIBLE:View.VISIBLE}"
                 >
 
